--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
+@import url('https://fonts.googleapis.com/css?family=Dosis&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
+
+
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-self: center;
+  align-content: center;
+  font-size: "0.5rem" !important;
 }
+.h1{
+  font-size: "0.7rem" !important;
 
-.App-link {
-  color: #61dafb;
 }
+.h2{
+  font-size: "0.6rem" !important;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.h3{
+  font-size: "0.5rem" !important;
+
+}
+.h4{
+  font-size: "0.4rem" !important;
+
+}
+.h5{
+  font-size: "0.3rem" !important;
+
+}
+.h6{
+  font-size: "0.2rem" !important;
+
+}
+.p{
+  font-size: "0.2rem" !important;
+
+}
+.body{
+  font-size: "0.5rem" !important;
+  
 }
